# aSTL

./: CMakeLists.txt  READM.md
astl/: CMakeLists.txt
astl/algorithm/: CMakeLists.txt  minmax_algo.hpp  modify.hpp  modify_algo.hpp
astl/algorithm/tests/: CMakeLists.txt  modify_algo_test.cpp
astl/allocator/: CMakeLists.txt  construct.hpp  initialize.hpp  simpleAllocator.hpp
astl/allocator/tests/: CMakeLists.txt  allocator_test.cpp
astl/base/: CMakeLists.txt  fundamental.hpp  type_traits.hpp
astl/container/: CMakeLists.txt  list.hpp  vector.cpp  vector.hpp
astl/container/tests/: CMakeLists.txt  list_tests.cpp  vector_tests.cpp
astl/iterator/: CMakeLists.txt  iterator.cpp  iterator.hpp  iteratorUtil.cpp  iteratorUtil.hpp  iterator_traits.cpp  iterator_traits.hpp
astl/iterator/tests/: CMakeLists.txt  iterator_test.cpp  iterator_traits_test.cpp
